samples/_failures_safe/1761086524_cd4b77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_914b0774.c: In function ‘print_stats’:
./samples/SAFE/__tmp_914b0774.c:140:23: error: expected ‘;’ at end of input
  140 |         case 3: printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_914b0774.c:140:9: error: expected declaration or statement at end of input
  140 |         case 3: printf
      |         ^~~~
./samples/SAFE/__tmp_914b0774.c:140:9: error: expected declaration or statement at end of input
